assets/css/_header.scss
/**
 * Header Stylesheet
 * -----------------------------------------------------------------------------
 * @category   Stylesheet
 * @package    Sheepie
 * @author     Mark Grealish <mark@bhalash.com>
 * @copyright  Copyright (c) 2015 Mark Grealish
 * @license    https://www.gnu.org/copyleft/gpl.html The GNU General Public License v3.0
 * @version    3.0
 * @link       https://github.com/bhalash/sheepie
 *
 * This file is part of Sheepie.
 * 
 * Sheepie is free software: you can redistribute it and/or modify it under the
 * terms of the GNU General Public License as published by the Free Software 
 * Foundation, either version 3 of the License, or (at your option) any later
 * version.
 * 
 * Sheepie is distributed in the hope that it will be useful, but WITHOUT ANY 
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along with 
 * Sheepie. If not, see <http://www.gnu.org/licenses/>.
 */

/**
 * Header Interior Element Defaults
 * -----------------------------------------------------------------------------
 * External rules for the header container are set in _containers.css. All rules
 * in this stylesheet are for elements /internal/ to #header.
 */

#header {
    #header-title, #header-social, #header-description {
        color: #fff;
        // font-weight: 300;
        text-align: center;
    }
}

/**
 * Header Title Text
 * -----------------------------------------------------------------------------
 */

#header-title {
    @include margin(0);

    a {
        color: inherit;
        letter-spacing: 1.5px;

        &:hover {
            text-decoration: none;
        }
    }
}

/**
 * Header Descriptive Paragraph
 * -----------------------------------------------------------------------------
 */

#header-description {
    box-sizing: border-box;
    @include margin(2 0);
    @include padding(0 2);

    span {
        border: 1px solid palette(white, dark); 
        border-width: 1px 0;
        box-sizing: border-box;
        display: inline-block;
        @include padding(1.5 0);
    }
}

/**
 * Header Social Media Menu
 * -----------------------------------------------------------------------------
 * Horizontal row of external social media links. The WordPress side of the 
 * logic is still TODO.
 */

#header-social {
    ul {
        margin: 0;
        list-style-type: none;
    }

    li, a {
        // WordPress requires menu links to have a text label.
        font-size: 0 !important;
    }

    li {
        border-radius: 50%;
        overflow: hidden;
        transition: background-color .2s ease-in;
    }

    @include generate-social-link(li, 35px 1) {
        display: inline-block;
        
        &:not(:hover) {
            background-color: transparent;
        }
    }

    a {
        display: block;
        @include square-flex(100% 1);
    }
}

